# piastrella

./: .gitignore  .travis.yml  LICENSE  README.md  meson.build
data/: com.github.sapoturge.piastrella.appdata.xml.in  com.github.sapoturge.piastrella.desktop.in  com.github.sapoturge.piastrella.gresource.xml  com.github.sapoturge.piastrella.gschema.xml
meson/: post_install.py
src/: Application.vala  MainWindow.vala
src/data/: Command.vala  DataCommand.vala  EditingCommand.vala  UndoStack.vala
src/png/: Chunk.vala  End.vala  Header.vala  ImageData.vala  Palette.vala  Png.vala  UnknownChunk.vala
src/widgets/: ColorButton.vala  TileSetView.vala  TileView.vala
